# serializer version: 1
# name: test_diagnostics
  dict({
    'config_entry': dict({
      'data': dict({
        'auth_type': 'api_token',
        'name': 'Test Plant',
        'plant_id': '**REDACTED**',
        'token': '**REDACTED**',
        'url': 'other_regions',
        'user_id': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'growatt_server',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
  })
# ---
# name: test_diagnostics_classic_api
  dict({
    'config_entry': dict({
      'data': dict({
        'auth_type': 'password',
        'name': 'Test Plant',
        'password': '**REDACTED**',
        'plant_id': '**REDACTED**',
        'url': 'other_regions',
        'username': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'growatt_server',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
  })
# ---
